# fuse-sdl3

./: .gitignore  BUILD-SDL3.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  INSTALL  KNOWN_ISSUES.md  LIBRETRO_IMPLEMENTATION.md  Makefile.am  README  README.md  RELEASE-SDL3.md  TESTING-SDL3.md  compat.h  config.h.cmake.in  configure.ac  event.h  fuse.c  fuse.h  input.c  input.h  keyboard.c  keysyms.pl  memory_pages.c  mempool.c  menu.c  menu.h  menu_data.pl  metadata-rebrand-patch-plan.md  module.c  movie.c  periph.c  phantom_typist.c  planNewFeatures.md  screenshot.c  sdlcompat.h  settings-header.pl  settings.pl  sound.c  sound.h  (+12 more)
.github/workflows/: ci.yml  release-libretro.yml  release.yml
cmake/: GenerateEmbeddedAssets.cmake  InstallRuntimeDependencies.cmake.in  RunProcessPipelineToFile.cmake  RunProcessToFile.cmake  RunShellToFile.cmake
compat/amiga/: paths.c
compat/unix/: paths.c
compat/wii/: paths.c
compat/win32/: fuse_console_launcher.c  osname.c  paths.c
dandanator/: dandanator-msft.rom  dandanator-msft.tap  example_implementation.c
dandanator/docs/Code/: CPCDandanator.vhd  Menusystem.rom  usbserial56k_CPC_v2.asm
dandanator/docs/Code/Eeeprom loaders/Loader Audio + kempston - for Java player/: Makefile  boot.asm  eewriter.asm  kempston_serial.asm  misleches.asm  sstwriter_6.5v.asm
dandanator/docs/Code/Eeeprom loaders/Loader Kempston Embedded in Romset/: Makefile  eewriter_romset.asm  kempston_serial_romset.asm  sstwriter_romset_6.5.asm
dandanator/docs/Code/Eeeprom loaders/Loader Kempston Slot 31/: Makefile  digits.asm  eewriter_slot31.asm  kempston_serial_romset.asm
data/: fuse.appdata.xml.in  fuse.desktop.in
data/shell-completion/bash/: fuse
data/win32/: distribution.mk  fuse.manifest.in  installer.nsi.in
debugger/: debugger.h  event.c  expression.c  system_variable.c  variable.c
exported-patches/: 0001-0001-switch-build-system-to-SDL3-detection.patch  0002-0002-add-SDL3-compatibility-layer-for-input-backends.patch  0003-0003-port-SDL-UI-display-backend-to-SDL3-surfaces.patch  0004-0004-port-SDL-audio-backend-to-SDL3-streams.patch  0005-0005-fix-SDL3-build-validation-regressions.patch  0006-0006-fix-SDL3-startup-checks.patch  0007-0007-fix-SDL-fullscreen-scaler-selection.patch  0008-0008-use-SDL-renderer-for-aspect-correct-scaling.patch  0009-0009-export-downstream-patch-series.patch  0010-0010-add-SDL3-distribution-build-documentation.patch  0011-0011-add-SDL3-testing-and-release-guides.patch  0012-0012-fix-sdlsound-portability-build-break.patch  0013-0013-refresh-exported-patch-series.patch  0014-0014-tolerate-legacy-non-XML-fuserc-files.patch  0015-0015-refresh-exported-patch-series.patch  0016-0016-fix-SDL-audio-startup-regressions.patch  0017-0017-refresh-exported-patch-series.patch  0018-0018-document-Wayland-workaround-and-xlib-verificati.patch
frontend/: runtime.c  runtime.h
hacking/: ui.txt
infrastructure/: startup_manager.c  startup_manager.h
libretro/: fuse-sdl3_libretro.info.in  libretro.h  libretro_core.c  libretro_frontend.c  libretro_frontend.h  libretro_option_stubs.c
m4/: ax_string_strcasecmp.m4  gtk-2.0.m4
man/: fuse.1
peripherals/: dandanator.c  dandanator.h  if2.c  joystick.c  scld.h  speccyboot.c  spectranet.c  ttx2000s.c
peripherals/disk/: disk.c
perl/: cpp-perl.pl
perl/Fuse/: Dialog.pm
pokefinder/: pokemem.h
repro/: fuse-linkset-repro.c  libdecor-direct-repro.c  libdecor-wayland-repro.c
scripts/: bootstrap-windows-deps.ps1  build-linux.sh  build-native-win.cmd  build-win.ps1  build-windows.ps1  configure-native-win.cmd  extract_release_notes.py  generate-default-config.pl  rebuild-libspectrum-native.cmd  smoke-test-libretro.ps1
shaders/: identity.glslp  m-crt.retroarch.glslp  mame_hlsl.glslp
shaders/shaders/: identity.glsl  m-crt.glsl
sound/: alsasound.c  blipbuffer.c  coreaudiosound.c  pulsesound.c  sdlsound.c  wiisound.c
timer/: sdl.c  timer.c
ui/: ui.h  uidisplay.h  uijoystick.c
ui/gtk/: gtkjoystick.c  gtkui.c
ui/scaler/: scaler.c  scaler.h  scalers.c
ui/sdl/: sdldisplay.c  sdldisplay.h  sdlglsl.c  sdlglsl.h  sdljoystick.c  sdljoystick.h  sdlkeyboard.c  sdlkeyboard.h  sdlshader.c  sdlshader.h  sdlui.c
ui/svga/: svgajoystick.c  svgaui.c
ui/widget/: Makefile.am  about.c  binary.c  browse.c  debugger.c  filesel.c  menu.c  mkfusefont.pl  query.c  widget.c  widget.h
ui/win32/: about.c  about.rc  win32joystick.c  win32joystick.h  win32joystick.rc  win32keyboard.c  win32ui.c
ui/xlib/: xjoystick.c
unittests/: unittests.c
vcpkg-ports/libspectrum/: portfile.cmake  vcpkg.json
z80/: Makefile.am  z80.h  z80.pl  z80_ops.c
~test/: aticatac.tap  aticatac.z80
